--- a/package.json
+++ b/package.json
@@ -18,28 +18,27 @@
   "author": "Legal Forms Generator",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.0",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
-    "express-rate-limit": "^6.7.0",
-    "helmet": "^6.1.5",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "axios": "^1.4.0",
-    "uuid": "^9.0.0",
+    "express-rate-limit": "^6.10.0",
+    "express-validator": "^7.0.0",
+    "helmet": "^7.1.0",
     "moment": "^2.29.4",
-    "ejs": "^3.1.9",
-    "express-validator": "^6.15.0",
-    "multer": "^1.4.5-lts.1",
-    "puppeteer": "^21.5.0",
+    "multer": "^2.0.0",
     "officegen": "^0.6.5",
-    "html-pdf": "^3.0.1",
-    "markdown-pdf": "^10.0.0"
+    "puppeteer": "^22.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "jest": "^29.5.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.0"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
+
