--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,43 @@
 .aider*
+
+# dependencies
+/node_modules
+
+# production
+/build
+/dist
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# IDEs and editors
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# test coverage
+/coverage
+
+# lock files (optional, keep if you want reproducible installs)
+# package-lock.json
+# yarn.lock
+
+# others
+*.tgz
+.npm/
+
