--- a/package.json
+++ b/package.json
@@ -19,18 +19,23 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
+    "bcrypt": "^6.0.0",
     "compression": "^1.8.0",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-rate-limit": "^6.10.0",
-    "express-validator": "^7.0.0",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "helmet": "^7.1.0",
     "moment": "^2.29.4",
     "multer": "^2.0.0",
+    "nodemailer": "^7.0.5",
     "officegen": "^0.6.5",
+    "pg": "^8.16.3",
     "puppeteer": "^22.0.0",
     "sitemap": "^7.1.2",
     "uuid": "^9.0.1"
