--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-rate-limit": "^6.10.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "form-data": "^4.0.5",
     "googleapis": "^169.0.0",
     "helmet": "^7.1.0",
     "moment": "^2.29.4",
