--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "natural": "^6.12.0",
     "nodemailer": "^7.0.5",
     "officegen": "^0.6.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-microsoft": "^2.1.0",
     "pg": "^8.16.3",
     "puppeteer": "^22.0.0",
     "qrcode": "^1.5.4",
